samples/_failures_safe/1761166898_16dea5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47ead6c9.c: In function ‘main’:
./samples/SAFE/__tmp_47ead6c9.c:198:5: error: expected declaration or statement at end of input
  198 |     Token tokens[MAX_TOKENS];
      |     ^~~~~
